# data-recipes

./: .gitignore  pyproject.toml  setup_env.sh
data_mixing_experiments/: README.md
data_mixing_experiments/olmo/: generate_configs.py
data_mixing_experiments/scripts/: compute_slimpajama_subset_indices.py  download_slimpajama.py  init_path.py  save_slimpajama_jsonl.py
data_mixing_experiments/utils/: data_utils.py  global_variables.py  misc_utils.py
opt_algos/: MFKG.ipynb  benchmarks.py  bopt_utils.py  data_model.py  eval_ei_optimizer.py  flops_dataset.csv  log_GridSearchOptimizer_2025-01-29_01-49-48.csv  log_GridSearchOptimizer_2025-01-29_01-58-43.csv  log_GridSearchOptimizer_2025-01-29_02-33-52.csv  log_RandomSearchOptimizer_2025-01-29_01-55-03.csv  log_RandomSearchOptimizer_2025-01-29_01-58-38.csv  log_RandomSearchOptimizer_2025-01-29_02-33-48.csv  log_SMACOptimizer_2025-01-29_01-49-18.csv  log_SMACOptimizer_2025-01-29_01-53-22.csv  log_SMACOptimizer_2025-01-29_01-56-57.csv  log_SMACOptimizer_2025-01-29_02-01-34.csv  log_SMACOptimizer_2025-01-29_02-03-00.csv  log_SMACOptimizer_2025-01-29_02-32-47.csv  misc_utils.py  opt_ideas.md  optimizers.py  plot.py  plot_bopy.ipynb  pyproject.toml  readme.md  run_dragonfly.ipynb  sweep.py  tests.pickle  tests.py  visualize.ipynb
opt_algos/botorch/: Discrete Multi Fidelity BoTorch.ipynb  MFKG1.ipynb  eimf copy.py  eimf.py  eimf2.py  readme.md  (+2 more)
predictor/: README.md  config.yaml  data.ipynb  old_train.py  pyproject.toml  sweep.py  train.py
predictor/analysis/: ANALYSIS.md  analysis.ipynb
smac_demo/: run_smac.ipynb
(+87 files in other folders)
